# kserve

./: .gitignore  .pre-commit-config.yaml  .release-checkpoint.json  Makefile  Makefile.kserve-module.mk  Makefile.tools.mk  go.mod  kserve-deps.env  kserve-images.sh
.bkit/audit/: 2026-04-17.jsonl  2026-04-18.jsonl
.bkit/runtime/: error-log.json
.bkit/state/: memory.json  pdca-status.json
.github/: copilot-instructions.md  copilot-setup-steps.yml  release.yml
.github/ISSUE_TEMPLATE/: release.yml
.github/agents/: bump-version.agent.md  release-agent.agent.md  release-agent.md  release-orchestrator.agent.md
.github/workflows/: comment-cherry-pick.yml  create-release.yml  e2e-test-kserve-module.yml  e2e-test-llmisvc.yaml  e2e-test-quick-install.yaml  e2e-test.yml  kserve-controller-docker-publish.yml  precommit-check-kserve-module.yml  predictiveserver-docker-publish.yml  prepare-release.yml  python-publish.yml  re-run-actions.yml  release-automation.yml  test-workflow-example.yml
charts/_common/: README.md  common-sections.yaml
charts/kserve-crd/: Chart.yaml  README.md
charts/kserve-crd-minimal/: Chart.yaml  README.md
charts/kserve-llmisvc-crd/: Chart.yaml  (+1 more)
hack/: create-release.sh  generate-install.sh  llmisvc_quick_install.sh  minimal-crdgen.sh  prepare-for-release.sh
kserve-module/: go.sum
python/: huggingface_server.Dockerfile  predictiveserver.Dockerfile
python/predictiveserver/: README.md  pyproject.toml
python/predictiveserver/predictiveserver/: __main__.py
release/: RELEASE_PROCESS_v3.md  RELEASE_PROCESS_v3.md.new  RELEASE_PROCESS_v4.md
(+383 files in other folders)
